# hack-rust

./: Cargo.toml  README.md  bohemia_entities.jsonl  bohemia_events.jsonl  bohemia_graph.py  bohemia_moments.jsonl  bohemia_triplets.jsonl  build.rs  grok.md  pyproject.toml  query.py  query.scm  querying.lua  querying.md
python/bohemia_graph_native/: __init__.py
src/: data.rs  ffi.rs  ffi_scm.rs  graph.rs  guile_sys.rs  lib.rs  loader.rs  main.rs  python.rs  types.rs
