[package]
name = "bohemia_graph"
version = "0.1.0"
edition = "2024"

[features]
default = []
python-native = ["dep:pyo3"]

[lib]
name = "bohemia_graph"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bohemia_query"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py310", "extension-module"] }

[build-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
